# Matrix-Calculator

./: CMakeLists.txt  Matrix-Calculator.cpp  Matrix-Calculator.sln  Matrix-Calculator.vcxproj  Matrix-Calculator.vcxproj.filters  README.md  command.h  matrix.cpp  matrix.h  operations.cpp  operations.h
src/: Determinant.cpp  Inverse.cpp  Matrix_Calculator.cpp  command.h  matrix.h  matrixCore.cpp  matrixIO.cpp  matrixOperators.cpp  operations.h
tests/: determinant_test.cpp  inverse_test.cpp  test_matrix.cpp
